# dev_utils_app

./: .gitignore  LICENSE  README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  main.py  pyproject.toml
dev_utils_app/: __init__.py  __main__.py  app.py
dev_utils_app/utils/: theme.py
dev_utils_app/views/: __init__.py  json_viewer.py  sidebar.py  text_diff.py
